force-app/main/default/objects/SLCA2__CalendarSettings__c/SLCA2__CalendarSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CalendarSettings</label>
</CustomObject>