force-app/main/default/objects/SLCA2__CalendarSettings__c/fields/SLCA2__Calendar_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__Calendar_Start_Day__c</fullName>
    <label>Calendar Start Day</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>