force-app/main/default/objects/SLCA2__CalendarSettings__c/fields/SLCA2__CurrencyLabel__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__CurrencyLabel__c</fullName>
    <label>CurrencyLabel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>