force-app/main/default/objects/SLCA2__CalendarSettings__c/fields/SLCA2__Time_Increment_15__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__Time_Increment_15__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Increment - 15</label>
    <type>Checkbox</type>
</CustomField>